# parking_pet_api

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TASKS.md  main.py  pyproject.toml
.junie/: guidelines.md
application/: apple_auth.py  auth.py  auth_session.py  auth_tokens.py  exceptions.py  property.py  property_category.py  property_note.py  property_search.py  search_feedback.py  search_history.py  user.py
application/dto/: property.py  property_note.py
application/property_search/: __init__.py  cache_policy.py  constants.py  hybrid.py  keywords.py  planner.py  planning.py  projection.py  ranking.py  routing.py  rules.py
docs/: README.md  search-recommendation.md
docs/development/: workflow-docstrings.md  workflow-external-service-costs.md  workflow-logging.md  workflow-subagent-collaboration.md  workflow-tooling.md  workflow-user-feedback.md
docs/documentation/: architecture.md
docs/property/: architecture.md  workflow-creation.md  workflow-favorite.md  workflow-management.md
docs/search/: architecture.md  guide-search-overview.md  workflow-feedback.md  workflow-nearby.md  workflow-optimization.md
docs/user/: architecture.md  guide-auth-sequence.md  workflow-account-lifecycle.md
domain/entities/: __init__.py  audit.py  enrichment.py  landmark_cache.py  parking.py  property.py  property_category.py  property_note.py  search.py  search_feedback.py  search_history.py  search_plan_cache.py  search_v2.py  user.py
domain/repositories/: landmark_cache.py  parking.py  place_raw_data.py  property.py  property_audit.py  property_note.py  search_feedback.py  search_history.py  search_plan_cache.py  user.py
domain/services/: embedding.py  property_enrichment.py
infrastructure/: runtime_warnings.py
infrastructure/apple/: __init__.py  auth.py
infrastructure/auth/: __init__.py  tokens.py
infrastructure/config/: __init__.py  logging.py
infrastructure/embedding/: __init__.py  vertex.py
infrastructure/google/: __init__.py  extract_query.py  langchain.py  place_api.py  search.py  search_v2.py  vertex.py
infrastructure/mongo/: __init__.py  landmark_cache.py  parking.py  place_raw_data.py  property.py  user.py  (+5 more)
tests/: conftest.py  test_property_categories.py  test_property_management.py  test_search_flow.py
(+80 files in other folders)
