[project]
name = "parking-pet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Liu",email = "ben4932042@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "vertexai (>=1.71.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
