[project]
name = "parking-pet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Liu",email = "ben4932042@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-google-vertexai (>=3.2.2,<4.0.0)",
    "langchain-mongodb (>=0.11.0,<0.12.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types",
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater\\.:UserWarning:langchain_core._api.deprecation",
    "ignore:This feature is deprecated as of June 24, 2025 and will be removed on June 24, 2026\\.:UserWarning:vertexai.generative_models._generative_models",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.25.0"
mongomock-motor = "^0.0.36"